<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoMath</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start">Start</string>
    <string name="calculate">Calculator</string>
    <string name="read">Reading Material</string>
    <string name="title_activity_splash">Geometric Figures</string>
    <string name="title_activity_fragment">fragment</string>
    <string name="title_activity_cone">Cone</string>
    <string name="cnresult">Result</string>
    <string name="cnradius">Enter Radius</string>
    <string name="cnheight">Enter Height</string>
    <string name="cnslant">Enter Slant Height</string>
    <string name="title_activity_sphere">Sphere</string>
    <string name="btn">Result</string>
    <string name="title_activity_index">Read it OUT</string>
    <string name="title_activity_circle">Circle</string>
    <string name="radius">Enter Radius</string>
    <string name="result">Result</string>
    <string name="title_activity_pyramid">Pyramid</string>
    <string name="plength">Enter Base Length</string>
    <string name="pwidth">Enter Base Width</string>
    <string name="pheight">Enter Pyramid Height</string>
    <string name="title_activity_square">Square</string>
    <string name="sq">Result</string>
    <string name="title_activity_imagelist">Imagelist</string>
    <string name="title_activity_custom_list_adapter">CustomListAdapter</string>
    <string name="title_activity_reactangle">Reactangle</string>
    <string name="hradius">Enter Radius</string>
    <string name="rbtn">Result</string>
    <string name="rmsg">Enter Length</string>
    <string name="rmsg1">Enter width</string>
    <string name="title_activity_cylinder">Cylinder</string>
    <string name="title_activity_rhombus">Rhombus</string>
    <string name="rhbtn">Result</string>
    <string name="rhms1">Enter side length</string>
    <string name="rhms2">Enter length  diagonal 1</string>
    <string name="rhms3">Enter length  diagonal 2</string>
    <string name="title_activity_cuboid">Cuboid</string>
    <string name="cubtn">Result</string>
    <string name="title_activity_hemisphere">Hemisphere</string>
    <string name="title_activity_trapezium">Trapezium</string>
    <string name="tbtn">Result</string>
    <string name="title_activity_triangle">Triangle</string>
    <string name="Ebl">Enter Base Length</string>
    <string name="Eh">Enter Height</string>
    <string name="Btn">Result</string>
    <string name="title_activity_bcone">Cone</string>
    <string name="title_activity_bcircle">Circle</string>
    <string name="title_activity_bpyramid">Pyramid</string>
    <string name="title_activity_bcylinder">Cylinder</string>
    <string name="title_activity_btriangle">Triangle</string>
    <string name="title_activity_bsquare">Square</string>
    <string name="title_activity_brectangle">Rectangle</string>
    <string name="title_activity_brhombus">Rhombus</string>
    <string name="title_activity_btrapezium">Trapezium</string>
    <string name="title_activity_bcuboid">Cuboid</string>
    <string name="title_activity_bsphere">Sphere</string>
    <string name="title_activity_bhemisphere">Hemisphere</string>
    <string name="cybtn">Result</string>
    <string name="cyradi">Enter Radius</string>
    <string name="cyhgt">Enter Height</string>
    <string name="chord_theorem">1. The perpendicular from the centre of a circle to a chord bisects the chord.\n \n 2.Equal chord of a circle substend equal angles at the centre. \n\n 3.If angle substended by the chords of a circle are equal, then the chords are equal.\n\n 4.The line drawn throgh the centre of a circle to bisect a chord is perpendicular to the chord. \n\n 5.Chords equidistant from centre of circle are equal in length.</string>
    <string name="tangent_theorem">1.A tangent to a circle is at a right angle to the radius at the point of contact. \n\n 2.Two tangents drawn on a circle from a point outside are equal in length.</string>
</resources>
